Fix REST API mapping
